add lab3 of pronyaeva sofya